--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -155,10 +155,12 @@
 .App-box-highlight,
 .App-box-solid {
   position: relative;
-  border-radius: 0.4rem;
-  background: #16182e;
+  background: white;
   font-size: var(--font-base);
+  outline: 1px solid #808BEE;
+  border-radius: 1rem;
 }
+
 
 .App-card-bottom-placeholder {
   visibility: hidden;
@@ -403,8 +405,9 @@ button.App-connect-wallet:hover {
 
 .App-card-divider {
   height: 1px;
-  background: #23263b;
   margin: 1.05rem -1.5rem;
+  border-top: 1px dashed #808BEE;
+
 }
 
 .App-box-solid {
@@ -1114,7 +1117,7 @@ button.App-button {
 }
 
 .App-slider .rc-slider-rail {
-  background: linear-gradient(90deg, #1e223d, #282d4a);
+  background: #E5E8FC;
 }
 
 .App-slider .rc-slider-track {
@@ -1126,7 +1129,7 @@ button.App-button {
   border-radius: 1px;
   width: 2px;
   margin-left: -1px;
-  background: #282d4a;
+  background: #E5E8FC;
 }
 
 .App-slider .rc-slider-dot-active {
@@ -1134,18 +1137,18 @@ button.App-button {
 }
 
 .App-slider .rc-slider-handle {
-  background: #303652;
-  border: 2px solid #2d42fc;
+  background: transparent;
+  border: 2px solid transparent;
 }
 
 .App-slider .rc-slider-handle:active {
-  box-shadow: 0 0 0.4rem 0.6rem rgba(45, 66, 252, 0.2);
+  background-color: #3d51ff;
 }
 
 .App-slider .rc-slider-mark-text,
 .App-slider .rc-slider-mark-text-active {
-  color: white;
-  opacity: 0.5;
+  color: --zypher-gray;
+
 }
 
 .App-slider .rc-slider-mark-text:hover,
