--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -37,11 +37,12 @@
   }
 
   &.primary-action {
-    background: var(--primary-btn-bg);
+    background: #0016DD;
     color: #fff;
     border-radius: 0.3rem;
-    padding: 1.65rem 1.6rem;
+    padding: 2.5rem 1.6rem;
     line-height: 1;
+    font-size: 2rem;
 
     &:not([disabled]):hover {
       background: var(--primary-btn-hover);
