--- a/src/components/BuyInputSection/BuyInputSection.scss
+++ b/src/components/BuyInputSection/BuyInputSection.scss
@@ -18,11 +18,12 @@
       display: flex;
       align-items: center;
       border-radius: 0.4rem;
-      color: #ffffff;
+      color: #000000;
       min-width: 4.65rem;
       font-size: 2.1rem;
       line-height: 2.5rem;
       justify-content: flex-end;
+     
 
       &:hover {
         color: #7885ff;
