--- a/src/components/Tab/Tab.css
+++ b/src/components/Tab/Tab.css
@@ -1,12 +1,14 @@
 .Tab.block {
   display: grid;
   grid-auto-flow: column;
-  font-size: var(--font-sm);
-  border-radius: 3px;
-  overflow: hidden;
-  color: rgba(255, 255, 255, 0.7);
-  background: linear-gradient(90deg, rgba(30, 34, 61, 0.9) 0%, rgba(38, 43, 71, 0.9) 100%);
+  font-size: 2rem;
+  border-radius: 1rem;
+
+  color: black;
+  background: #D9D9D933;
   box-shadow: inset 0px 0px 30px 5px rgba(255, 255, 255, 0.01);
+  border: 1px solid #808BEE;
+
 }
 
 .Tab-option-icon {
@@ -23,15 +25,17 @@
 }
 
 .Tab.block .Tab-option:hover {
-  color: rgba(255, 255, 255, 1);
-  background: #3a3f798f;
+  color: black;
+  font-weight: 500;
 }
 
 .Tab.block .Tab-option.active {
   opacity: 1;
   pointer-events: none;
-  background: var(--primary-btn-bg);
-  color: rgba(255, 255, 255, 1);
+  background: #E5E8FC;
+  color: black;
+  outline: 1px solid #0016DD;
+  border-radius: 1rem;
 }
 
 .Tab.block .Tab-option.active .Tab-option-icon {
