--- a/src/pages/Exchange/Exchange.css
+++ b/src/pages/Exchange/Exchange.css
@@ -6,7 +6,7 @@
 
 .Exchange-trigger-order-info,
 .Exchange-trigger-order-info a {
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(0, 0, 0);
   border: 1px solid #23263b;
 }
 
