--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,25 +9,13 @@
 
 .App-header.large {
   height: 6.2rem;
-  backdrop-filter: blur(4px);
   display: flex;
   justify-content: space-between;
   position: relative;
   padding-left: 3.2rem;
   padding-right: 3.2rem;
-  background: transparent 0% 0% no-repeat padding-box;
-  border-bottom: 1px solid #ffffff10;
 }
 
-.App-header.large::after {
-  height: 1.3rem;
-  width: 100%;
-  content: " ";
-  background: transparent linear-gradient(180deg, #00000030 0%, #00000000 100%) 0% 0% no-repeat padding-box;
-  position: absolute;
-  bottom: -1.3rem;
-  left: 0;
-}
 
 .App-header.large .App-header-links {
   display: flex;
@@ -43,7 +31,6 @@
 
 .App-header-drawer {
   background: #17182c88 0% 0% no-repeat padding-box;
-  box-shadow: 0.8rem 0.3rem 0.6rem #00000029;
   opacity: 1;
   backdrop-filter: blur(2.7rem);
   position: fixed;
@@ -281,7 +268,6 @@
     height: 1.3rem;
     width: 100%;
     content: " ";
-    background: transparent linear-gradient(180deg, #00000030 0%, #00000000 100%) 0% 0% no-repeat padding-box;
     position: absolute;
     bottom: -1.3rem;
     left: 0;
@@ -335,4 +321,33 @@
   .App-header-drawer {
     background: #0e0f1f;
   }
+}
+
+.simple-advanced-switch{
+  display: flex;
+  margin: 0 2.5rem;
+}
+.switch-button{
+  border: none;
+  border-radius: 0.5rem;
+  font-size: 1.5rem;
+  color: #4C4E62;
+  background-color: transparent;
+  font-weight: 500;;
+}
+.page-name-trade{
+  color: #000;
+  font-family: IBM Plex Mono;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.switch-button:hover{
+  color: black;
+}
+.switch-button.active{
+  background-color: rgba(0, 22, 221,0.1);
+  color: #0016DD;
+
 }
