--- a/src/components/AddressDropdown/AddressDropdown.scss
+++ b/src/components/AddressDropdown/AddressDropdown.scss
@@ -32,8 +32,8 @@
   width: 100%;
   transform-origin: top right;
   border-radius: 0.4rem;
-  background: #16182e;
-  border: 1px solid #32344c;
+  background: #ffffff;
+  border: 1px solid #808bee;
   list-style: none;
   cursor: pointer;
   outline: none;
@@ -43,7 +43,7 @@
     display: flex !important;
     align-items: center;
     font-size: var(--font-base);
-    color: #a0a3c4;
+    color: #000000;
     padding-bottom: 1.5rem;
     font-size: var(--font-sm);
     padding: 0.85rem 0.8rem;
