--- a/src/components/Exchange/ChartTokenSelector.css
+++ b/src/components/Exchange/ChartTokenSelector.css
@@ -4,12 +4,29 @@
 }
 
 .chart-token-selector--current {
-  font-size: 2.1rem;
-  font-weight: 700;
+  font-size: 1.7rem;
+  font-weight: 500;
   margin-right: 1rem;
-  color: white;
+  margin-left: 1rem;
+  gap: 0.5rem;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
+.token-selector-name{
+  
+}
+.token-selector-symbol{
+  margin-left: 0.5rem;
+  color: gray;
+  opacity: 0.9;
+  font-weight: 400;
+}
+.token-current-logo{
+  width: 25px;
+  height: 25px;
+}
 .chart-token-menu-items.menu-items {
   width: 15.8rem;
   top: 6rem;
