--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,14 +1,14 @@
 .sidebar {
-  width: 250px; /* Adjust the width as needed */
-  background-color: #f0f0f0; /* Adjust the background color as needed */
+  width: 18rem; /* Adjust the width as needed */
+  background-color: #fff; /* Adjust the background color as needed */
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100vh;
 }
 
 .logo {
   margin-top: 20px;
-  /* Add any other desired styles for the logo */
 }
 
 .buttons {
@@ -21,7 +21,21 @@
 
 .button {
   margin-bottom: 10px;
-  /* Add any other desired styles for the buttons */
+  font-size: 2rem;
+  color: #545454;
+  font-weight: 500;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  gap: 0.5rem;
+  background-color: transparent;
+  border-radius: 1rem;
+}
+.button:hover {
+    background-color: #E5E8FC;
+    cursor: pointer;
+
+
 }
 
 .help-button {
