--- a/src/components/Exchange/TokenSelector.css
+++ b/src/components/Exchange/TokenSelector.css
@@ -125,7 +125,7 @@
 
 .TokenSelector-token-row .Token-text {
   font-size: var(--font-md);
-  color: #ffffff;
+  color: #000000;
   font-weight: 500;
   letter-spacing: 0px;
 }
