--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -34,8 +34,9 @@
   max-width: 100%;
   max-height: 90vh;
   overflow: auto;
-  background: #16182e;
+  background: #ffffff;
   border-radius: 4px;
+  border: 1px solid #0016DD;
 }
 
 .divider {
