--- a/src/components/BuyInputSection/BuyInputSection.scss
+++ b/src/components/BuyInputSection/BuyInputSection.scss
@@ -11,7 +11,7 @@
   &.Exchange-swap-section {
     min-height: 9.2rem;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
 
     .TokenSelector-box {
@@ -19,10 +19,10 @@
       align-items: center;
       border-radius: 0.4rem;
       color: #000000;
-      min-width: 4.65rem;
+      min-width: 9.65rem;
       font-size: 2.1rem;
       line-height: 2.5rem;
-      justify-content: flex-end;
+      justify-content: space-between;
      
 
       &:hover {
@@ -71,4 +71,26 @@
       align-items: center;
     }
   }
+}
+.buy-input-left-section{
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: space-between;
+  padding-left: 1rem;
+  padding-right: 0.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+
+}
+.buy-input-right-section{
+  display: flex;
+  flex-direction: column;
+  border-left: 1px solid #0016DD;
+  justify-content: space-between;
+  padding-left: 0.5rem;
+  padding-right: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  
 }
