--- a/src/pages/Exchange/Exchange.css
+++ b/src/pages/Exchange/Exchange.css
@@ -497,6 +497,7 @@ table.Exchange-list td {
   text-align: left;
   padding: 1.05rem;
   padding-left: 1.5rem;
+  text-wrap: nowrap;
 }
 table.Exchange-list.Orders th,
 table.Exchange-list.Orders td {
@@ -642,7 +643,6 @@ table.Exchange-list th {
 }
 
 .Exchange-swap-section {
-  padding: 1.5rem;
   margin-bottom: 1.05rem;
   box-shadow: inset 0px 0px 3rem 0.5rem rgba(255, 255, 255, 0.01);
   outline: 1px solid #0016dd;
@@ -1091,4 +1091,8 @@ table.Exchange-list-small td {
   .chart-positions {
     display: none;
   }
+}
+
+.left-col-position {
+  border-right: 1px dashed #0016DD;
 }
