--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -328,7 +328,7 @@
   border: 1px solid var(--dark-blue-border);
   border-radius: 0.3rem;
   position: relative;
-  color: white;
+  color: #000;
   font-size: 2rem;
   display: grid;
   grid-template-columns: auto 1fr;
