--- a/src/components/Common/Loader.css
+++ b/src/components/Common/Loader.css
@@ -14,7 +14,7 @@
   width: 1.6rem;
   height: 1.6rem;
   margin: 4.65rem 0.31rem;
-  background: #8385aa;
+  background: #0016dd;
   border-radius: 50%;
   animation: bouncing-loader 0.6s infinite alternate;
 }
