--- a/src/components/AddressDropdown/AddressDropdown.scss
+++ b/src/components/AddressDropdown/AddressDropdown.scss
@@ -32,8 +32,7 @@
   width: 100%;
   transform-origin: top right;
   border-radius: 0.4rem;
-  background: #ffffff;
-  border: 1px solid #808bee;
+  background: #e8e8e8;
   list-style: none;
   cursor: pointer;
   outline: none;
