--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1290,21 +1290,21 @@ button.App-button {
 
   .App-header.small {
     height: 6.2rem;
-    backdrop-filter: blur(4px);
     display: flex;
     justify-content: space-between;
     position: relative;
     padding-left: 1.6rem;
     padding-right: 1.6rem;
-    background: transparent 0% 0% no-repeat padding-box;
-    border-bottom: 1px solid #ffffff10;
+    background: white;
+    border-bottom: 1px solid #0016DD;
+    box-shadow: -1px 0px 0px 0px #808BEE;
+
   }
 
   .App-header.small::after {
     height: 1.3rem;
     width: 100%;
     content: " ";
-    background: transparent linear-gradient(180deg, #00000030 0%, #00000000 100%) 0% 0% no-repeat padding-box;
     position: absolute;
     bottom: -1.3rem;
     left: 0;
