--- a/src/pages/Exchange/Exchange.css
+++ b/src/pages/Exchange/Exchange.css
@@ -654,7 +654,7 @@ table.Exchange-list th {
 .Exchange-swap-section {
   margin-bottom: 1.05rem;
   box-shadow: inset 0px 0px 3rem 0.5rem rgba(255, 255, 255, 0.01);
-  border: none;
+  border: 1px solid #0016DD;
 
 }
 
@@ -962,7 +962,7 @@ table.Exchange-list-small td {
   }
 }
 
-@media (max-width: 1100px) {
+@media screen and (max-width: 1200px) {
   .Exchange-swap-box {
     width: auto;
   }
@@ -1061,7 +1061,7 @@ table.Exchange-list-small td {
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 1000px) {
   .ExchangeChart-top-inner {
     grid-template-columns: auto auto auto;
     grid-column-gap: 0.8rem;
